[ticket/11984] Prevent AJAX background animation flicker in ACP
PHPBB3-11984

--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -1587,6 +1587,8 @@ input.button1:focus, input.button2:focus, input.button3:focus {
 
 #darkenwrapper {
 	display: none;
+	position: relative;
+	z-index: 44;
 }
 
 #darken {
